[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/basic_sprites/purple-enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/WandererController.gd" type="Script" id=2]
[ext_resource path="res://Enemy/PlayerDetectionZone.gd" type="Script" id=3]
[ext_resource path="res://Enemy/BurstShotEnemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[sub_resource type="CircleShape2D" id=4]
radius = 500.0

[node name="BurstShotEnemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource( 3 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 4 )

[node name="WandererController" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="WandererController"]
one_shot = true
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PlayerDetectionCycle" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="WandererController/Timer" to="WandererController" method="_on_Timer_timeout"]
[connection signal="timeout" from="PlayerDetectionCycle" to="." method="_on_PlayerDetectionCycle_timeout"]
